force-app/main/default/objects/Class_Student__c/fields/Donation_Balance__c.field-meta.xml
<CustomField>
    <fullName>Donation_Balance__c</fullName>
    <label>Donation Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>