force-app/main/default/objects/Class_Student__c/fields/Fees_Balance__c.field-meta.xml
<CustomField>
    <fullName>Fees_Balance__c</fullName>
    <label>Fees Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>