force-app/main/default/objects/Class_Student__c/fields/Is_New_Student__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Student__c</fullName>
    <label>Is New Student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>