force-app/main/default/objects/Class_Student__c/fields/Students__c.field-meta.xml
<CustomField>
    <fullName>Students__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Students</label>
    <referenceTo>Students__c</referenceTo>
    <relationshipLabel>Class Students</relationshipLabel>
    <relationshipName>Class_Students</relationshipName>
    <type>Lookup</type>
</CustomField>