force-app/main/default/objects/Class_Student__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <displayFormat>CS-{00000}</displayFormat>
    <label>Unique Identifier</label>
    <type>AutoNumber</type>
</CustomField>